# file-org-wiz

./: .gitattributes  .gitignore  AGENTS.md  AI_File_Organization_Agent_Prompt.md  AUDIT_REPORT.md  CHANGELOG.md  CHEATSHEET.md  CONTRIBUTING.md  FAQ.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  README_MCP.md  REFERENCE_CARD.md  SECURITY.md  SKILL.md  USER_GUIDE.md  Why_PARA_Zettelkasten.md  install_codeium.md  install_cody.md  install_cursor_windsurf.md  install_gptme.md  install_mint.md  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  roadmap.md
.github/workflows/: ci.yml
docs/install/: install_aider.md  install_amazonq.md  install_claude_code.md  install_claude_desktop.md  install_codex.md  install_continue.md  install_copilot.md  install_mcp_generic.md  install_opencode.md  install_raycast.md  install_tabnine.md
docs/templates/: 01_meeting.md  02_daily.md  04_area_dashboard.md  05_project_note.md
examples/: organize_downloads.py
research/: organization-research1.md  organization-research2.md  organization-research3.md
src/: file_intelligence.py  mcp_server.py  nlp_processor.py
src/duplicates/: __init__.py
src/file_org_wiz/: file_intelligence.py  mcp_server.py  nlp_processor.py
src/file_org_wiz/api/: routes.py
src/file_org_wiz/core/: __init__.py  analytics.py  operations.py  organize.py  organizer.py  security.py
src/file_org_wiz/duplicates/: __init__.py  duplicate_detection.py  duplicate_merger.py  duplicate_utils.py
src/file_org_wiz/scanner/: __init__.py
src/file_org_wiz/zettelkasten/: __init__.py  links.py  notes.py
src/scanner/: __init__.py
src/zettelkasten/: __init__.py
templates/: 03_project_moc.md  README.md
tests/: conftest.py  test_api.py  test_core.py  test_duplicates.py  test_intelligence.py  test_scanner.py  test_security.py  test_zettelkasten.py
