[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file-org-wiz"
version = "1.3.0"
description = "AI-powered file organization system using PARA + Zettelkasten methodology"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Turin", email = "turin@turintechsolutions.com"},
]
keywords = ["file-organization", "para", "zettelkasten", "mcp", "obsidian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Utilities",
]
dependencies = [
    "flask>=2.3.2",
    "werkzeug>=2.3.0",
    "flask-cors>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/iknowkungfubar/file-org-wiz"
Repository = "https://github.com/iknowkungfubar/file-org-wiz"
Documentation = "https://github.com/iknowkungfubar/file-org-wiz#readme"

[project.scripts]
file-org-wiz = "file_org_wiz.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["file_org_wiz*"]

[tool.ruff]
target-version = "py38"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "SIM", "Q"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]
"src/file_org_wiz/duplicates/__init__.py" = ["S324"]  # md5 for dedup, not crypto

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
